// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Main /> > displays dates for older messages 1`] = `
HTMLCollection [
  <span
    class="_date-span_b76533 _item_b76533"
  >
    Mar 30th
  </span>,
  <div
    aria-label="Partner's message"
    class="_message_b76533 _item_b76533"
  >
    First dated message
    <span
      class="_time-span_b76533"
    >
      22:33
    </span>
  </div>,
  <div
    aria-label="Partner's message"
    class="_message_b76533 _item_b76533"
  >
    Second message sent on Sun Mar 30 2025 22:33:37 GMT+0200 (Central European Summer Time)
    <span
      class="_time-span_b76533"
    >
      22:33
    </span>
  </div>,
  <span
    class="_date-span_b76533 _item_b76533"
  >
    Mar 31st
  </span>,
  <div
    aria-label="Partner's message"
    class="_message_b76533 _item_b76533"
  >
    Message sent on Mon Mar 31 2025 22:33:37 GMT+0200 (Central European Summer Time)
    <span
      class="_time-span_b76533"
    >
      22:33
    </span>
  </div>,
]
`;

exports[`<Main /> > displays default profile picture on users without one 1`] = `"http://localhost:3000/src/assets/default-profile-picture.jpeg"`;

exports[`<Main /> > displays messaging interface when correct username is displayed 1`] = `"http://localhost:3000/mockedFilePath"`;

exports[`<Main /> > displays today tags for todays messages 1`] = `
HTMLCollection [
  <span
    class="_date-span_b76533 _item_b76533"
  >
    Mar 30th
  </span>,
  <div
    aria-label="Partner's message"
    class="_message_b76533 _item_b76533"
  >
    Not an todays message
    <span
      class="_time-span_b76533"
    >
      22:33
    </span>
  </div>,
  <span
    class="_date-span_b76533 _item_b76533"
  >
    Today
  </span>,
  <div
    aria-label="Partner's message"
    class="_message_b76533 _item_b76533"
  >
    First todays message
    <span
      class="_time-span_b76533"
    >
      22:23
    </span>
  </div>,
  <div
    aria-label="Your message"
    class="_message_b76533 _item_b76533"
  >
    Second todays message
    <span
      class="_time-span_b76533"
    >
      22:23
    </span>
  </div>,
]
`;

exports[`<Main /> > displays yesterday tags for yesterdays messages 1`] = `
HTMLCollection [
  <span
    class="_date-span_b76533 _item_b76533"
  >
    Mar 30th
  </span>,
  <div
    aria-label="Partner's message"
    class="_message_b76533 _item_b76533"
  >
    Not an yesterdays message
    <span
      class="_time-span_b76533"
    >
      22:33
    </span>
  </div>,
  <span
    class="_date-span_b76533 _item_b76533"
  >
    Yesterday
  </span>,
  <div
    aria-label="Partner's message"
    class="_message_b76533 _item_b76533"
  >
    First yesterdays message
    <span
      class="_time-span_b76533"
    >
      22:33
    </span>
  </div>,
  <div
    aria-label="Your message"
    class="_message_b76533 _item_b76533"
  >
    Second yesterdays message
    <span
      class="_time-span_b76533"
    >
      22:33
    </span>
  </div>,
]
`;
